# crm-server

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  docker-compose.yml
.github/workflows/: server_tests_ci.yml
controllers/: ActionController.h  StateController.h
crm/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
crm/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapwidget.cpp  mapwidget.h
crm/test/: movementTest.odt  repairTest.odt  shootTest.odt
download/server/: Dockerfile  INSTALL_DOCUMENTATION.md  crmserverinst
download/server/from-deb/: Dockerfile  inst-depends  mehConfig-example.json
server/: CMakeLists.txt  Dockerfile  br.sh  config-example.json  main.cc
server/controllers/: ActionController.cc  ActionController.h  MapController.cc  MapController.h  MovementController.cc  MovementController.h  StateController.cc  StateController.h
server/database/: mehConfig-example.json
server/sutils/: actionSutils.cc  actionSutils.h  movementSutils.cc  movementSutils.h  sutils.cc  sutils.h
server/test/: CMakeLists.txt  teso_actionSutilsRepairing.cc  testClass.cc  testClass.h  test_actionSutilsShooting.cc  test_main.cc
sutils/: actionSutils.h  movementSutils.cc  movementSutils.h  sutils.cc  sutils.h
test/: CMakeLists.txt  teso_actionSutilsRepairing.cc  testClass.h  test_actionSutilsShooting.cc
testing-server-handlers/tests/: Dockerfile  pyvenv.cfg  requirements.txt  tests.py
testing-server-handlers/tests/all/: test_map.py  test_repair.py  test_shoot.py
